<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Custom Strings -->
    <string name="app_name">OpenBYOD v01</string>
    <string name="action_compose">Escrever Email</string>
    <string name="action_reply_email">Responder Email</string>
    

    <!-- Hint Srings -->
    <string name="emailTo">Para</string>
    <string name="emailSubject">Assunto</string>
    <string name="emailBody">Escrever email</string>
    <string name="prompt_user">Usuário</string>
    <string name="labelEditTextEmailFrom">De:</string>
    <string name="labelEditTextEmailTo">Para:</string>
    <string name="labelEditTextEmailSubject">Assunto:</string>

    <!-- Menu Strings -->
    <string name="action_settings">Settings</string>
    <string name="action_send_email">Enviar Email</string>

    <!-- Default Strings -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Entrar</b></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="title_activity_inbox">Inbox</string>
    <string name="title_activity_read_mail">ReadMail</string>
    <string name="title_activity_compose">Compose</string>
    <string name="title_activity_login">Sign in</string>
    
    <!-- New Contact Strings -->
	<string name="labelEditTextNewContactName">Nome:</string>
    <string name="labelEditTextNewContactNumber">Número:</string>
    <string name="action_save_new_contact">Novo Contato</string>
    <string name="action_send_new_contact">Salvar Contato</string>
    
    <!-- Rest Strings -->
    <string name="rest_server_url">https://192.168.0.100:8181/OpenBYODServerSide/rest</string>
    <string name="title_activity_new_contact">NewContact</string>
    <string name="hello_world">Hello world!</string>

</resources>
