<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ReadMail" >
    
    <EditText
        android:id="@+id/editTextReadEmailFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/labelEditTextEmailFrom"
        android:focusable="false"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextReadEmailTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextReadEmailFrom"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/labelEditTextEmailTo"
        android:ems="10"
        android:focusable="false"
        android:inputType="textEmailAddress" >

    </EditText>

    <EditText
        android:id="@+id/editTextReadEmailSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextReadEmailTo"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/labelEditTextEmailSubject"
        android:ems="10"
        android:focusable="false"
        android:inputType="text" >

    </EditText>

    <EditText
        android:id="@+id/editTextReadEmailBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextReadEmailSubject"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:focusable="false" 
        android:inputType="textMultiLine">
    </EditText>
    

    <TextView
        android:id="@+id/labelEditTextEmailTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextReadEmailSubject"
        android:layout_alignTop="@+id/editTextReadEmailTo"
        android:gravity="center"
        android:text="@string/labelEditTextEmailTo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/labelEditTextEmailSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextReadEmailBody"
        android:layout_alignLeft="@+id/editTextReadEmailBody"
        android:layout_alignTop="@+id/editTextReadEmailSubject"
        android:gravity="center"
        android:text="@string/labelEditTextEmailSubject"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/labelEditTextEmailFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextReadEmailTo"
        android:layout_alignLeft="@+id/labelEditTextEmailTo"
        android:layout_alignTop="@+id/editTextReadEmailFrom"
        android:gravity="center"
        android:text="@string/labelEditTextEmailFrom"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
